0.04

0.03 2015-09-25T15:30:18+02:00
 - Move author tests to xt/ directory.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.02 2014-12-06T18:06:55+01:00
 - Add Error::Pure::Utils to dependencies.
 - Add comments to tests.
 - Add tests for TIEHASH.
 - Add tests for Test::NoWarnings.
 - Fix test for scalar() method (#100706 Possible hash randomization
   problems in test suite). Thanks Slaven Rezić.
 - Update LICENSE AND COPYRIGHT section in doc.

0.01 2014-11-27T20:00:34+01:00
 - First version.